footer partial updated

--- a/src/app/evolution.hbs
+++ b/src/app/evolution.hbs
@@ -167,7 +167,7 @@
           </div>
         </div>
       </div>
-      {{> partials/footer-home}}
+      {{> partials/footer}}
     </div>
     {{> partials/scripts}}
     <script src="./project-detail.js"></script>
