--- a/src/app/index.hbs
+++ b/src/app/index.hbs
@@ -49,7 +49,7 @@
               </text>
             </svg>
           </div>
-          <h1 class="mb-0 mt-2 mt-sm-5 text-white hyun-title">Dylan C Hyun</h1>
+          <h1 class="mb-0 mt-5 text-white hyun-title">Dylan C Hyun</h1>
         </div>
         <div class="bg-lines hidden">
           <div class="line line-top-home line-left"></div>
@@ -80,8 +80,8 @@
           <div class="col">
             <div class="project-card project-card__lg theme-prudential row">
               <div class="project-card__content col-md-6 col-12 pr-0 pr-md-6 d-flex flex-column">
-                <h3 class="mb-0">Evolution Design System</h3>
-                <h4 class="text-lg font-weight-light mb-4">Prudential</h4>
+                <h3 class="mb-md-0 mb-2">Evolution Design System</h3>
+                <h4 class="h5 font-weight-light mb-4">Prudential</h4>
                 <p class="mb-4 mb-md-0">Building a new company-wide design system from the ground up. Leading the digital “evolution” of a 140 year old company to redefine its standing in the financial services industry.</p>
                 <a class="project-card__link mt-auto" href="./evolution.html"><span class="link-text">Explore Project</span></a>
               </div>
@@ -98,7 +98,7 @@
                 <img src="./assets/prudential.png">
               </div>
               <div class="project-card__content">
-                <h3 class="h4 mb-0">Animated Icon Library</h3>
+                <h3 class="h4 mb-md-0 mb-2">Animated Icon Library</h3>
                 <h4 class="h5 font-weight-light mb-4">Prudential</h4>
                 <a class="project-card__link mt-auto" href="#"><span class="link-text">Explore Project</span></a>
               </div>
@@ -110,7 +110,7 @@
                 <img src="./assets/prudential.png">
               </div>
               <div class="project-card__content">
-                <h3 class="h4 mb-0">Cluster</h3>
+                <h3 class="h4 mb-md-0 mb-2">Cluster</h3>
                 <h4 class="h5 font-weight-light mb-4">Deloitte Innovation Competition</h4>
                 <a class="project-card__link mt-auto" href="#"><span class="link-text">Explore Project</span></a>
               </div>
@@ -118,7 +118,7 @@
           </div>
         </div>
       </div>
-      {{> partials/footer-home}}
+      {{> partials/footer}}
     </div>
     {{> partials/scripts}}
     <script src="./home.js"></script>
