--- a/src/styles/hyun-style/utilities/_u-type.scss
+++ b/src/styles/hyun-style/utilities/_u-type.scss
@@ -72,6 +72,10 @@
     font-size: $h4-font-size;
     font-family: $headings-font-family;
     fill: var(--theme-primary);
+
+    &.copyright-text {
+      font-size: $font-size-xs;
+    }
   }
 }
 
