--- a/src/app/index.hbs
+++ b/src/app/index.hbs
@@ -93,28 +93,10 @@
         </div>
         <div class="row pb-6">
           <div class="col-md-5 col-12 pb-6 pb-md-0">
-            <div class="project-card theme-fw">
-              <div class="project-card__image pb-3">
-                <img src="./assets/prudential.png">
-              </div>
-              <div class="project-card__content">
-                <h3 class="h4 mb-md-0 mb-2">Animated Icon Library</h3>
-                <h4 class="h5 font-weight-light mb-4">Prudential</h4>
-                <a class="project-card__link mt-auto" href="#"><span class="link-text">Explore Project</span></a>
-              </div>
-            </div>
+            {{> partials/project-card-dev}}
           </div>
           <div class="col-md-5 offset-md-2 offset-0 col-12">
-            <div class="project-card theme-cluster">
-              <div class="project-card__image pb-3">
-                <img src="./assets/prudential.png">
-              </div>
-              <div class="project-card__content">
-                <h3 class="h4 mb-md-0 mb-2">Cluster</h3>
-                <h4 class="h5 font-weight-light mb-4">Deloitte Innovation Competition</h4>
-                <a class="project-card__link mt-auto" href="#"><span class="link-text">Explore Project</span></a>
-              </div>
-            </div>
+            {{> partials/project-card-cluster}}
           </div>
         </div>
       </div>
