--- a/src/app/partials/footer.hbs
+++ b/src/app/partials/footer.hbs
@@ -14,7 +14,7 @@
           </textPath>
         </text>
       </svg>
-      <h2 class="sr-only">Contact Me</h2>
+      <h2 id="contact" class="sr-only">Contact Me</h2>
       <img class="footer-img border border-width-sm border-primary" src="./assets/profile.jpg" alt="The once decent picture Dylan has of himself.">
     </div>
   </div>
