--- a/src/app/partials/navigation-home.hbs
+++ b/src/app/partials/navigation-home.hbs
@@ -11,8 +11,8 @@
     </a>
   </div>
   <div class="nav-right d-flex flex-row align-items-center">
-    <a class="nav-link" href="#">About</a>
+    <a class="nav-link" href="./about.html">About</a>
     <a class="nav-link" href="./assets/Hyun_Dylan_resume.pdf" target="_blank">Resume<span class="sr-only">opens in a new window</span></a>
-    <a class="nav-link" href="#">Contact</a>
+    <a class="nav-link" href="#contact">Contact</a>
   </div>
 </div>
