--- a/src/styles/hyun-style/_hyun-variables.scss
+++ b/src/styles/hyun-style/_hyun-variables.scss
@@ -10,6 +10,7 @@ $pru-primary: #06c;
 $fw-primary: #b9952a;
 $cluster-primary: #e38029;
 $birds-primary: #009444;
+$help-primary: #717171;
 
 // Secondary
 $hyun-white: #fff;
@@ -83,6 +84,7 @@ $hyun-border-width-xs: 1px;
 $hyun-border-width-sm: 3px;
 $hyun-border-width: 5px;
 
+$hyun-border-radius-xs: 1.2rem;
 $hyun-border-radius-sm: 2rem;
 $hyun-border-radius: 3rem;
 
