--- a/src/styles/hyun-style/components/_c-nav.scss
+++ b/src/styles/hyun-style/components/_c-nav.scss
@@ -30,6 +30,7 @@
   height: 6rem;
   font-family: $headings-font-family;
   font-size: $font-size-base;
+  font-weight: 400;
   text-decoration: none;
   z-index: 0;
   transition: .2s ease-out;
