--- a/src/styles/hyun-style/utilities/_u-bg.scss
+++ b/src/styles/hyun-style/utilities/_u-bg.scss
@@ -20,3 +20,11 @@
 .bg-gray-light {
   background-color: $hyun-gray-light;
 }
+
+// About Page Divider
+.bg-image-divider {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 40rem;
+}
