--- a/src/styles/foundation/_reboot.scss
+++ b/src/styles/foundation/_reboot.scss
@@ -19,6 +19,7 @@ body {
   font-family: $font-family-base;
   font-size: $font-size-base;
   color: $body-color;
+  line-height: $body-line-height;
 }
 
 // Typography
