--- a/src/styles/foundation/_variables.scss
+++ b/src/styles/foundation/_variables.scss
@@ -55,6 +55,7 @@ $font-size-root: null !default;
 $font-size-base: 1rem !default;
 
 $body-color: #1a1d1e;
+$body-line-height: 1.5 !default;
 
 $paragraph-margin-bottom: 1rem !default;
 
