--- a/src/styles/hyun-style/_hyun-components.scss
+++ b/src/styles/hyun-style/_hyun-components.scss
@@ -5,5 +5,6 @@
 @use "./components/c-project-detail";
 @use "./components/c-project-grid";
 @use "./components/c-hero";
+@use "./components/c-links";
 @use "./components/c-bg-lines";
 @use "./components/c-buttons";
