--- a/src/styles/hyun-style/_hyun-utilities.scss
+++ b/src/styles/hyun-style/_hyun-utilities.scss
@@ -1,4 +1,5 @@
 @use "./utilities/u-bg";
 @use "./utilities/u-borders";
 @use "./utilities/u-icons";
+@use "./utilities/u-images";
 @use "./utilities/u-type";
